--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test3 Git Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <h1>My Test3 Repo</h1>
     <h2>Hello Everyone!</h2>
     <h3>R U Well?</h3>
+    <p>
+        I am Well. How r u? How r all going? Do anything now?
+    </p>
     
 </body>
 </html>
