style add and new learning about discard

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <h1>My Test3 Repo</h1>
     <h2>Hello Everyone!</h2>
-    <h3>R U Well?</h3>
+    <h3>R U Well?  H3 changed to some new feature</h3>
     <p>
         I am Well. How r u? How r all going? Do anything now?
     </p>
