--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         I am Well. How r u? How r all going? Do anything now?
     </p>
     
+<img src="shanto.jpg" alt="">
+<img src="Logo.JPG" alt="L">
+
 </body>
 </html>
